# dundie.rewards

./: .gitignore  MANIFEST.in  Makefile  README.md  conftest.py  dundie.log.1  dundie.log.10  dundie.log.2  dundie.log.5  dundie.log.6  dundie.log.8  mkdocs.yml  pyproject.toml  pyvenv.cfg  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py  test-result.xml
.github/workflows/: main.yml
assets/: database.json  people.csv
docs/: how_to_install.md  how_to_use.md  index.md  roadmap.md
dundie/: __main__.py  cli.py  core.py  database.py  settings.py  utills.py
dundie/util/: email.py
integration/: conftest.py  test_load.py
tests/: conftest.py  constants.py  test_add.py  test_database.py  test_load.py  test_read.py  test_utills.py
tests/assets/: people.csv
tiagovondundie/: __main__.py  cli.py  core.py  database.py  email.py  user.py
